--- a/MVVMDemo/MVVMDemo/MVVMDemo.csproj
+++ b/MVVMDemo/MVVMDemo/MVVMDemo.csproj
@@ -60,11 +60,13 @@
 	  <None Remove="MVVM\Models\" />
 	  <None Remove="MVVM\Views\" />
 	  <None Remove="MVVM\ViewModels\" />
+	  <None Remove="MVVM\Converters\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="MVVM\" />
 	  <Folder Include="MVVM\Models\" />
 	  <Folder Include="MVVM\Views\" />
 	  <Folder Include="MVVM\ViewModels\" />
+	  <Folder Include="MVVM\Converters\" />
 	</ItemGroup>
 </Project>
