--- a/BMI/BMI/BMI.csproj
+++ b/BMI/BMI/BMI.csproj
@@ -53,7 +53,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
-		<PackageReference Include="Syncfusion.Maui.Gauges" Version="22.2.5" />
+		<PackageReference Include="Syncfusion.Maui.Gauges" Version="22.2.7" />
+		<PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
